@@ -73,6 +73,8 @@ Standard library:
 - PR#6694, PR#6695: deprecate functions using ISO-8859-1 character set
   in Char, Bytes, String and provide alternatives using US-ASCII.
   (Peter Zotov)
+- GPR#216: add the missing POSIX.1-2001 signals in Sys
+  (Guillaume Bury)
 
 Type system:
 - PR#5545: Type annotations on methods cannot control the choice of abbreviation
